--- a/option3-2.html
+++ b/option3-2.html
@@ -213,37 +213,88 @@
                 </div>
                 <div class="articleContent">
                     <div>
-                        <p>Follow these steps before you get building work, renovations or repairs done on your home. They’ll help you save time, money and stress. They’ll also help you avoid problems with builders, decorators or other contractors, eg plumbers and electricians.</p>
 
+                            <h2>Step 2: Find good builders or contractors</h2>
 
-      <!--div class="callout">
-        <a class="callout__link">Link one</a>
-        <a class="callout__link">Link two</a>
-        <a class="callout__link">Link three</a>
-      </div-->
+                            <p>Recommendations and references are good ways to find reliable contractors who do a good job.</p>
 
-                <h4>Steps in this guide</h4>
-                    <div class="steps">
-                        <a href="option3-1.html" class="steps__link"><span class="steps--number">1</span>
-                            <strong>Check if you need permission or approval</strong></br>
-                                Avoid costly penalties by checking if you need building regulations approval for home improvements, planning permission for building work, or permission as a leaseholder.</a>
-                        <a href="option3-2.html"  class="steps__link"><span class="steps--number">2</span>
-                                <strong>Find good builders or contractors</strong></br>
-                                Don’t just rely on what it says on contractors’ websites. Get personal recommendations or references and do the proper checks to find someone you can trust to do a good job.</a>
-                        <a href="option3-3.html"  class="steps__link"><span class="steps--number">3</span>
-                                <strong>Get quotes before you decide who to use</strong></br>
-                                    Check you’re getting a fair price by getting at least 3 quotes before you decide. Get a quote not an estimate - a quote gives you a fixed price, so you know exactly how much you’ll pay.</a>
-                        <a href="option3-4.html"  class="steps__link"><span class="steps--number">4</span>
-                            <strong>Check there’s insurance in place</strong></br>
-                                Check the contractor’s insurance to make sure you don’t face big costs if things go wrong. Then check that your home insurance still covers you while the work’s being done.</a>
-                        <a href="option3-5.html"  class="steps__link"><span class="steps--number">5</span>
-                            <strong>Get a written contract</strong></br>
-                                Avoid disputes later by getting agreement in writing on details like start and finish dates, tidying up and how you’ll pay.</a>
-                        <a href="option3-6.html" class="steps__link"><span class="steps--number">6</span>
-                            <strong>Be prepared to deal with problems</strong></br>
-                                Speak to contractors as soon as problems come up, and get them to agree to put them right.</a>
-                    </div>
+                            <p>If you can’t get personal recommendations from people you know, ask contractors for references. It’s best to get:</p>
 
+                            <ul>
+                                <li>2 or 3 recent examples of similar work they’ve done</li>
+
+                                <li>contact details for the people they did the work for - it’s best to get in touch because written references aren’t always genuine</li>
+                            </ul>
+
+                            <div class="callout">
+                                <p>Avoid contractors who won’t give references - it’s a sign they could be dishonest.</p>
+                            </div>
+
+                            <h3>Do the proper checks</h3>
+
+                            <p>It’s dangerous to use someone who doesn’t know what they’re doing, especially for anything involving gas or electrics.</p>
+
+                            <p>It’s important to check that you’re using:</p>
+
+                            <ul>
+                                <li>a registered gas engineer for gas work, eg installing a boiler or cooker</li>
+
+                                <li>a registered electrician for electrical work, eg installing new lighting or rewiring</li>
+
+                                <li>someone in a competent person scheme for work that needs building regulations approval (unless you got approval yourself)</li>
+                            </ul>
+
+                            <div class="callout">
+                                <p>You could be breaking the law if you don’t do these checks.</p>
+                            </div>
+
+                            <p>You should also do the following checks to help you find a contractor you can trust.</p>
+
+                            <h4>Check for approved contractors</h4>
+
+                            <p>Contractors can sign up for schemes that list them as ‘approved’. This means they’ve agreed to meet professional standards. The scheme may also have checked they’re trustworthy and do a good job - check the scheme’s website to find out how they approve contractors.</p>
+
+                            <p>These are good places to search for approved contractors:</p>
+
+                            <ul>
+                                <li>TrustMark - check the type of work you need is listed in the contractor’s ‘licensed trades’ (they’ll have passed checks proving that they’re qualified for that trade)</li>
+
+                                <li>Buy With Confidence for contractors approved by Trading Standards</li>
+
+                                <li>your local council’s approved trader scheme, if they have one</li>
+                            </ul>
+
+                            <h4>Check what a contractor says</h4>
+
+                            <p>It’s good idea to check what a contractor or their website tells you - especially if they’ve knocked on your door or telephoned you to offer their services. For instance, you can:</p>
+
+                            <ul>
+                                <li>ask to see a business card or letterhead, or get full contact details, then ring the business to check it exists and the contractor works for them</li>
+
+                                <li>ask to see proof of qualifications - eg an NVQ in construction for builders or a card from the Construction Skills Certification Scheme (trade associations can tell you about qualifications for particular types of work)</li>
+
+                                <li>search trade association websites to check they’re a member if they say they are</li>
+                            </ul>
+
+                            <div class="callout">
+                                <p>Avoid contractors who just give a mobile number. They may be hard to contact if problems come up. It could also be a sign they’re unreliable or dishonest.</p>
+                            </div>
+
+                            <h4>Interview contractors in person</h4>
+
+                            <p>It’s a good idea to speak with contractors in person before you hire them, eg when they come to your home to give a quote.</p>
+
+                            <p>Trust your instincts and make sure you can communicate with them easily - this will help you sort out any problems that come up later.</p>
+
+                            <p>Before you meet them, it’s a good idea to write down:</p>
+
+                            <ul>
+                                <li>a clear and detailed description of exactly what you want done</li>
+
+                                <li>a list of questions to help you get all the information you need to compare and choose between contractors - Trustmark has questions you can use as a checklist</li>
+                            </ul>
+
+                            <p>When you meet them, write down what they say they’ll do - if they don’t end up doing it, having it in writing can help you hold them to their word or get some of your money back.</p>
 
                     </div>
                 </div>
@@ -284,6 +335,22 @@
                 </form>
             </aside>
 
+
+
+
+            <nav class="side-nav" data-track-zone="side-nav">
+                <div class="sticker">
+                    <div class="steps--navigation">
+                        <h4>Steps in this guide</h4>
+                        <a href="option3-1.html" class="steps--navigation__link"><span class="steps--navigation--number">1</span>Check if you need permission or approval</a>
+                        <a href="option3-2.html" class="steps--navigation__link--active"><span class="steps--navigation--number">2</span>Find good builders or contractors</a>
+                        <a href="option3-3.html" class="steps--navigation__link"><span class="steps--navigation--number">3</span>Get quotes before you decide who to use</a>
+                        <a href="option3-4.html" class="steps--navigation__link"><span class="steps--navigation--number">4</span>Check there’s insurance in place</a>
+                        <a href="option3-5.html" class="steps--navigation__link"><span class="steps--navigation--number">5</span>Get a written contract</a>
+                        <a href="option3-6.html" class="steps--navigation__link"><span class="steps--navigation--number">6</span>Be prepared to deal with problems</a>
+                    </div>
+                </div>
+            </nav>
 
             <!-- Social Sharing bar hidden for testing -->
             <!--
