--- a/option3-3.html
+++ b/option3-3.html
@@ -213,37 +213,74 @@
                 </div>
                 <div class="articleContent">
                     <div>
-                        <p>Follow these steps before you get building work, renovations or repairs done on your home. They’ll help you save time, money and stress. They’ll also help you avoid problems with builders, decorators or other contractors, eg plumbers and electricians.</p>
 
+                            <h2>Step 3: Get quotes before you decide who to use</h2>
 
-      <!--div class="callout">
-        <a class="callout__link">Link one</a>
-        <a class="callout__link">Link two</a>
-        <a class="callout__link">Link three</a>
-      </div-->
+                            <p>A quote is a promise from the contractor to do the work at a fixed price.</p>
 
-                <h4>Steps in this guide</h4>
-                    <div class="steps">
-                        <a href="option3-1.html" class="steps__link"><span class="steps--number">1</span>
-                            <strong>Check if you need permission or approval</strong></br>
-                                Avoid costly penalties by checking if you need building regulations approval for home improvements, planning permission for building work, or permission as a leaseholder.</a>
-                        <a href="option3-2.html"  class="steps__link"><span class="steps--number">2</span>
-                                <strong>Find good builders or contractors</strong></br>
-                                Don’t just rely on what it says on contractors’ websites. Get personal recommendations or references and do the proper checks to find someone you can trust to do a good job.</a>
-                        <a href="option3-3.html"  class="steps__link"><span class="steps--number">3</span>
-                                <strong>Get quotes before you decide who to use</strong></br>
-                                    Check you’re getting a fair price by getting at least 3 quotes before you decide. Get a quote not an estimate - a quote gives you a fixed price, so you know exactly how much you’ll pay.</a>
-                        <a href="option3-4.html"  class="steps__link"><span class="steps--number">4</span>
-                            <strong>Check there’s insurance in place</strong></br>
-                                Check the contractor’s insurance to make sure you don’t face big costs if things go wrong. Then check that your home insurance still covers you while the work’s being done.</a>
-                        <a href="option3-5.html"  class="steps__link"><span class="steps--number">5</span>
-                            <strong>Get a written contract</strong></br>
-                                Avoid disputes later by getting agreement in writing on details like start and finish dates, tidying up and how you’ll pay.</a>
-                        <a href="option3-6.html" class="steps__link"><span class="steps--number">6</span>
-                            <strong>Be prepared to deal with problems</strong></br>
-                                Speak to contractors as soon as problems come up, and get them to agree to put them right.</a>
-                    </div>
+                            <p>It’s a good idea to get at least 3 written quotes before you decide on a contractor. Comparing quotes will help you decide if you’re getting a fair price.</p>
 
+                            <p>Don’t rely on a verbal quote - get it in writing. After you say yes to a quote, it’s a binding agreement between you and the contractor, whether it’s written down or not. But having it in writing means you can check what you agreed and prove it if there’s a dispute later.</p>
+
+                            <p>Some contractors charge for quotes - ask about this first.</p>
+
+                            <div class="callout">
+                                <p>Make sure you get a quote, not an estimate. An estimate is just a rough guess of the price, and you could end up having to pay more.</p>
+                            </div>
+
+                            <p>The contractor can’t charge you more than the price on their quote unless:</p>
+
+                            <ul>
+                                <li>you ask for extra work that’s not included in the quote</li>
+
+                                <li>they let you know they have to do extra work and you agree to pay more for it</li>
+
+                                <li>they made a genuine mistake when writing down or calculating the price - they have the legal right to charge you what it should have been</li>
+                            </ul>
+
+                            <div class="callout">
+                                <p>Avoid contractors who won’t put a quote in writing. It’s a sign they could be unreliable.</p>
+
+                                <p>Also be cautious if their price is a lot lower than other quotes you get. It could mean they don’t have the right skills or experience, or they’re not being honest.</p>
+                            </div>
+
+                            <h3>What a quote should include</h3>
+
+                            <p>Be very clear about the work you want done - this will help you get the most accurate price and save misunderstandings later.</p>
+
+                            <p>A quote should include:</p>
+
+                            <ul>
+                                <li>a fixed total price - not a daily rate</li>
+
+                                <li>a breakdown of all the work to be done and the materials needed</li>
+
+                                <li>separate costs for each material and part of the work</li>
+
+                                <li>how long the price is valid for</li>
+
+                                <li>if the price includes VAT</li>
+
+                                <li>when the price can go up, eg only if you agree to extra work</li>
+                            </ul>
+
+                            <p>If you get a daily rate instead of a fixed total price there’s a risk the contractor could string out the work to get more money. Avoid this by getting them to put in writing:</p>
+
+                            <ul>
+                                <li>how many days the work will take</li>
+
+                                <li>how many hours of work counts as a day</li>
+
+                                <li>when they need your go-ahead to work more days</li>
+                            </ul>
+
+                            <div class="callout">
+                                <p>Before saying yes to a quote, you should check there’s insurance in place and try to get a written contract.</p>
+                            </div>
+
+                            <h4>See a sample quote</h4>
+
+                            <p>You can download a PDF of a sample quote.</p>
 
                     </div>
                 </div>
@@ -284,6 +321,22 @@
                 </form>
             </aside>
 
+
+
+
+            <nav class="side-nav" data-track-zone="side-nav">
+                <div class="sticker">
+                    <div class="steps--navigation">
+                        <h4>Steps in this guide</h4>
+                        <a href="option3-1.html" class="steps--navigation__link"><span class="steps--navigation--number">1</span>Check if you need permission or approval</a>
+                        <a href="option3-2.html" class="steps--navigation__link"><span class="steps--navigation--number">2</span>Find good builders or contractors</a>
+                        <a href="option3-3.html" class="steps--navigation__link--active"><span class="steps--navigation--number">3</span>Get quotes before you decide who to use</a>
+                        <a href="option3-4.html" class="steps--navigation__link"><span class="steps--navigation--number">4</span>Check there’s insurance in place</a>
+                        <a href="option3-5.html" class="steps--navigation__link"><span class="steps--navigation--number">5</span>Get a written contract</a>
+                        <a href="option3-6.html" class="steps--navigation__link"><span class="steps--navigation--number">6</span>Be prepared to deal with problems</a>
+                    </div>
+                </div>
+            </nav>
 
             <!-- Social Sharing bar hidden for testing -->
             <!--
