--- a/option3-4.html
+++ b/option3-4.html
@@ -213,38 +213,40 @@
                 </div>
                 <div class="articleContent">
                     <div>
-                        <p>Follow these steps before you get building work, renovations or repairs done on your home. They’ll help you save time, money and stress. They’ll also help you avoid problems with builders, decorators or other contractors, eg plumbers and electricians.</p>
 
+                            <h2>Step 4: Check there’s insurance in place</h2>
 
-      <!--div class="callout">
-        <a class="callout__link">Link one</a>
-        <a class="callout__link">Link two</a>
-        <a class="callout__link">Link three</a>
-      </div-->
+                            <h3>Contractors’ insurance - what to check</h3>
 
-                <h4>Steps in this guide</h4>
-                    <div class="steps">
-                        <a href="option3-1.html" class="steps__link"><span class="steps--number">1</span>
-                            <strong>Check if you need permission or approval</strong></br>
-                                Avoid costly penalties by checking if you need building regulations approval for home improvements, planning permission for building work, or permission as a leaseholder.</a>
-                        <a href="option3-2.html"  class="steps__link"><span class="steps--number">2</span>
-                                <strong>Find good builders or contractors</strong></br>
-                                Don’t just rely on what it says on contractors’ websites. Get personal recommendations or references and do the proper checks to find someone you can trust to do a good job.</a>
-                        <a href="option3-3.html"  class="steps__link"><span class="steps--number">3</span>
-                                <strong>Get quotes before you decide who to use</strong></br>
-                                    Check you’re getting a fair price by getting at least 3 quotes before you decide. Get a quote not an estimate - a quote gives you a fixed price, so you know exactly how much you’ll pay.</a>
-                        <a href="option3-4.html"  class="steps__link"><span class="steps--number">4</span>
-                            <strong>Check there’s insurance in place</strong></br>
-                                Check the contractor’s insurance to make sure you don’t face big costs if things go wrong. Then check that your home insurance still covers you while the work’s being done.</a>
-                        <a href="option3-5.html"  class="steps__link"><span class="steps--number">5</span>
-                            <strong>Get a written contract</strong></br>
-                                Avoid disputes later by getting agreement in writing on details like start and finish dates, tidying up and how you’ll pay.</a>
-                        <a href="option3-6.html" class="steps__link"><span class="steps--number">6</span>
-                            <strong>Be prepared to deal with problems</strong></br>
-                                Speak to contractors as soon as problems come up, and get them to agree to put them right.</a>
-                    </div>
+                            <p>Ask to see insurance policies and check they don’t run out before the work will be finished. If it’s insurance they must have, they have to let you see the policy.</p>
 
+                            <h4>Insurance they must have</h4>
 
+                            <p>Public liability insurance - contractors are breaking the law if they don’t have this. It covers you and them if someone’s hurt or property is damaged (eg your home or your neighbour’s).</p>
+
+                            <p>Employers’ liability insurance - contractors who work through a company are breaking the law if they don’t have this. It doesn’t matter if it’s their own company or not. It covers you and the company if they’re hurt on the job.</p>
+
+                            <div class="callout--warning">
+                                <p>If a contractor doesn’t have the right insurance, and things go wrong or someone’s hurt, you could be forced to pay to fix things, or go to court and pay damages and legal fees.</p>
+                            </div>
+
+                            <h4>Other insurance to check for</h4>
+
+                            <p>Other types of insurance are optional, but they’re worth looking for.</p>
+
+                            <p>Contractors’ all-risk cover - this cover the cost of replacing work that’s destroyed before it’s completed, and before your insurance covers it.</p>
+
+                            <p>Insurance-backed warranties or guarantees - you can buy one of these as part of the cost of the work, if the contractor offers it. Check exactly what’s covered before you decide to buy one - it should cover the cost of finishing or fixing the work if the contractor does a bad job or goes out of business.</p>
+
+                            <h3>Your insurance - what to check</h3>
+
+                            <p>If you have home or contents insurance, contact your insurer to check you will be covered during the work. You may have to pay more for your insurance during and after the work.</p>
+
+                            <p>Your insurer will probably want to know what contractor you’re using and what insurance they have. They might suggest that you take out joint insurance with the contractor.</p>
+
+                            <div class="callout">
+                                <p>If you don’t have home and contents insurance, it’s worth getting some before the work starts - there’s a bigger risk your home will be damaged or your things stolen while work’s going on.</p>
+                            </div>
                     </div>
                 </div>
 
@@ -284,6 +286,22 @@
                 </form>
             </aside>
 
+
+
+
+            <nav class="side-nav" data-track-zone="side-nav">
+                <div class="sticker">
+                    <div class="steps--navigation">
+                        <h4>Steps in this guide</h4>
+                        <a href="option3-1.html" class="steps--navigation__link"><span class="steps--navigation--number">1</span>Check if you need permission or approval</a>
+                        <a href="option3-2.html" class="steps--navigation__link"><span class="steps--navigation--number">2</span>Find good builders or contractors</a>
+                        <a href="option3-3.html" class="steps--navigation__link"><span class="steps--navigation--number">3</span>Get quotes before you decide who to use</a>
+                        <a href="option3-4.html" class="steps--navigation__link--active"><span class="steps--navigation--number">4</span>Check there’s insurance in place</a>
+                        <a href="option3-5.html" class="steps--navigation__link"><span class="steps--navigation--number">5</span>Get a written contract</a>
+                        <a href="option3-6.html" class="steps--navigation__link"><span class="steps--navigation--number">6</span>Be prepared to deal with problems</a>
+                    </div>
+                </div>
+            </nav>
 
             <!-- Social Sharing bar hidden for testing -->
             <!--
