--- a/option3-5.html
+++ b/option3-5.html
@@ -213,38 +213,130 @@
                 </div>
                 <div class="articleContent">
                     <div>
-                        <p>Follow these steps before you get building work, renovations or repairs done on your home. They’ll help you save time, money and stress. They’ll also help you avoid problems with builders, decorators or other contractors, eg plumbers and electricians.</p>
 
+                            <h2>Step 5: Get a written contract</h2>
 
-      <!--div class="callout">
-        <a class="callout__link">Link one</a>
-        <a class="callout__link">Link two</a>
-        <a class="callout__link">Link three</a>
-      </div-->
+                            <p>As soon as you give a contractor the go-ahead, you’ve made a contract with them, even if it’s not written down.</p>
 
-                <h4>Steps in this guide</h4>
-                    <div class="steps">
-                        <a href="option3-1.html" class="steps__link"><span class="steps--number">1</span>
-                            <strong>Check if you need permission or approval</strong></br>
-                                Avoid costly penalties by checking if you need building regulations approval for home improvements, planning permission for building work, or permission as a leaseholder.</a>
-                        <a href="option3-2.html"  class="steps__link"><span class="steps--number">2</span>
-                                <strong>Find good builders or contractors</strong></br>
-                                Don’t just rely on what it says on contractors’ websites. Get personal recommendations or references and do the proper checks to find someone you can trust to do a good job.</a>
-                        <a href="option3-3.html"  class="steps__link"><span class="steps--number">3</span>
-                                <strong>Get quotes before you decide who to use</strong></br>
-                                    Check you’re getting a fair price by getting at least 3 quotes before you decide. Get a quote not an estimate - a quote gives you a fixed price, so you know exactly how much you’ll pay.</a>
-                        <a href="option3-4.html"  class="steps__link"><span class="steps--number">4</span>
-                            <strong>Check there’s insurance in place</strong></br>
-                                Check the contractor’s insurance to make sure you don’t face big costs if things go wrong. Then check that your home insurance still covers you while the work’s being done.</a>
-                        <a href="option3-5.html"  class="steps__link"><span class="steps--number">5</span>
-                            <strong>Get a written contract</strong></br>
-                                Avoid disputes later by getting agreement in writing on details like start and finish dates, tidying up and how you’ll pay.</a>
-                        <a href="option3-6.html" class="steps__link"><span class="steps--number">6</span>
-                            <strong>Be prepared to deal with problems</strong></br>
-                                Speak to contractors as soon as problems come up, and get them to agree to put them right.</a>
-                    </div>
+                            <p>But you should always try to get a contract in writing before you give the go-ahead. If the contractor doesn’t do what you agreed, a written contract can help you get what you paid for at least get some of your money back.</p>
 
+                            <div class="callout">
+                                <p>Avoid contractors who won’t put anything in writing - it’s a sign they could be dishonest.</p>
+                            </div>
 
+                            <p>If the contractor gives you a contract, check if covers everything you agreed. If they don’t you can write your own.</p>
+
+                            <p>Written contracts don’t need to be in legal language - they just need to outline:</p>
+
+                            <ul>
+                                <li>exactly what you’re paying for (they can refer back to the quote for this)</li>
+
+                                <li>everything you’ve agreed on, eg timings, tidying up and payments</li>
+                            </ul>
+
+                            <h3>Timings</h3>
+
+                            <p>Make sure the contract covers:</p>
+
+                            <ul>
+                                <li>start and finish dates</li>
+
+                                <li>if you’ve agreed on a daily rate, the number of days the work will take and how many working hours are in a day</li>
+
+                                <li>delays - why they might happen, and what the contractor will do about them</li>
+                            </ul>
+
+                            <h3>Tidying up</h3>
+
+                            <p>Make sure the contract covers:</p>
+
+                            <ul>
+                                <li>how and when the contractors will remove rubbish and clear up after themselves</li>
+
+                                <li>who pays for delivery and collection of any skips</li>
+                            </ul>
+
+                            <h3>Materials, equipment and subcontractors</h3>
+
+                            <p>Make sure the contract covers:</p>
+
+                            <ul>
+                                <li>who pays to buy or hire materials and equipment</li>
+
+                                <li>for things the contractor buys, how they’ll give you receipts and paperwork</li>
+
+                                <li>if and when they’ll use subcontractors</li>
+                            </ul>
+
+                            <h3>Payments</h3>
+
+                            <p>Make sure the contract covers how and when you’ll pay. Aim to:</p>
+
+                            <ul>
+                                <li>pay by card not cash</li>
+
+                                <li>pay in stages</li>
+
+                                <li>avoid deposits or upfront payments</li>
+
+                                <li>get some protection for your money</li>
+                            </ul>
+
+                            <div class="callout">
+                                <p>Avoid contractors who only accept cash or want you to pay everything upfront - it’s a sign they could be dishonest or unreliable.</p>
+                            </div>
+
+                            <h4>Paying by card not cash</h4>
+
+                            <p>If you pay by credit or debit card, you may be able to get your money back through your bank if something goes wrong, eg the contractor doesn’t turn up but refuses to pay back your deposit.</p>
+
+                            <p>If this happens, you can contact your bank and say you want to use the ‘chargeback’ scheme. Many bank staff don’t know about the scheme, so you may need to talk to a manager.</p>
+
+                            <p>If you pay more than £100 by credit card, it may be easier to tell your bank you want to ‘make a section 75 claim’. It’s another way to get your money back.</p>
+
+                            <h4>Paying in stages</h4>
+
+                            <p>This is a good idea, particularly if it’s a big job, because it means problems can be put right before you make the final payment. Be clear about the point in the work when payments are due.</p>
+
+                            <h4>Avoiding deposits</h4>
+
+                            <p>Don’t agree to pay everything up front, in case something goes wrong or the contractor doesn’t turn up.</p>
+
+                            <p>If they ask for a deposit to pay for materials, offer to buy them yourself instead of paying a deposit - that way, at least you own the materials if something goes wrong.</p>
+
+                            <p>If the work will take a long time, you may not be able to avoid a deposit. Aim to push it down as much as possible, and don’t agree to more than 25%.</p>
+
+                            <p>Always get a receipt for a deposit, as well as receipts for any materials it covers.</p>
+
+                            <h4>Getting protection</h4>
+
+                            <p>You can protect your deposit or staged payments until the work’s complete, eg with a:</p>
+
+                            <ul>
+                                <li>deposit protection scheme - your money will be stored in a secure account until you and the builder are happy with the work</li>
+
+                                <li>insurance-backed warranty or guarantee - you can buy one of these from some contractors to cover the cost of finishing or fixing work if they do a bad job or go out of business</li>
+                            </ul>
+
+                            <h3>Help writing your own contract</h3>
+
+                            <p>It can help to look at example contracts, or create a contract using a template - eg for:</p>
+
+                            <ul>
+                                <li>home repairs or maintenance - you can download a free contract template</li>
+
+                                <li>building work - you can download an example contract or buy a contract template</li>
+                            </ul>
+
+                            <div class="callout">
+                                <p>You have 14 days to cancel the contract after giving the go-ahead or signing a written contract. This is known as the cooling-off period.</p>
+                            </div>
+
+                            <div class="callout--yellow">
+                                <h3>Further help</h3>
+
+                                <p>Contact the Citizens Advice consumer helpline if you need more help - a trained adviser can give you advice over the phone or by email.</p>
+                            </div>
                     </div>
                 </div>
 
@@ -284,6 +376,22 @@
                 </form>
             </aside>
 
+
+
+
+            <nav class="side-nav" data-track-zone="side-nav">
+                <div class="sticker">
+                    <div class="steps--navigation">
+                        <h4>Steps in this guide</h4>
+                        <a href="option3-1.html" class="steps--navigation__link"><span class="steps--navigation--number">1</span>Check if you need permission or approval</a>
+                        <a href="option3-2.html" class="steps--navigation__link"><span class="steps--navigation--number">2</span>Find good builders or contractors</a>
+                        <a href="option3-3.html" class="steps--navigation__link"><span class="steps--navigation--number">3</span>Get quotes before you decide who to use</a>
+                        <a href="option3-4.html" class="steps--navigation__link"><span class="steps--navigation--number">4</span>Check there’s insurance in place</a>
+                        <a href="option3-5.html" class="steps--navigation__link--active"><span class="steps--navigation--number">5</span>Get a written contract</a>
+                        <a href="option3-6.html" class="steps--navigation__link"><span class="steps--navigation--number">6</span>Be prepared to deal with problems</a>
+                    </div>
+                </div>
+            </nav>
 
             <!-- Social Sharing bar hidden for testing -->
             <!--
