--- a/option3-6.html
+++ b/option3-6.html
@@ -213,38 +213,24 @@
                 </div>
                 <div class="articleContent">
                     <div>
-                        <p>Follow these steps before you get building work, renovations or repairs done on your home. They’ll help you save time, money and stress. They’ll also help you avoid problems with builders, decorators or other contractors, eg plumbers and electricians.</p>
 
+                            <h2>Step 6: Be prepared to deal with problems</h2>
 
-      <!--div class="callout">
-        <a class="callout__link">Link one</a>
-        <a class="callout__link">Link two</a>
-        <a class="callout__link">Link three</a>
-      </div-->
+                            <p>Get the contractor’s full contact details before work starts. If you know how to get in touch, it’s easier to deal with any problems that come up.</p>
 
-                <h4>Steps in this guide</h4>
-                    <div class="steps">
-                        <a href="option3-1.html" class="steps__link"><span class="steps--number">1</span>
-                            <strong>Check if you need permission or approval</strong></br>
-                                Avoid costly penalties by checking if you need building regulations approval for home improvements, planning permission for building work, or permission as a leaseholder.</a>
-                        <a href="option3-2.html"  class="steps__link"><span class="steps--number">2</span>
-                                <strong>Find good builders or contractors</strong></br>
-                                Don’t just rely on what it says on contractors’ websites. Get personal recommendations or references and do the proper checks to find someone you can trust to do a good job.</a>
-                        <a href="option3-3.html"  class="steps__link"><span class="steps--number">3</span>
-                                <strong>Get quotes before you decide who to use</strong></br>
-                                    Check you’re getting a fair price by getting at least 3 quotes before you decide. Get a quote not an estimate - a quote gives you a fixed price, so you know exactly how much you’ll pay.</a>
-                        <a href="option3-4.html"  class="steps__link"><span class="steps--number">4</span>
-                            <strong>Check there’s insurance in place</strong></br>
-                                Check the contractor’s insurance to make sure you don’t face big costs if things go wrong. Then check that your home insurance still covers you while the work’s being done.</a>
-                        <a href="option3-5.html"  class="steps__link"><span class="steps--number">5</span>
-                            <strong>Get a written contract</strong></br>
-                                Avoid disputes later by getting agreement in writing on details like start and finish dates, tidying up and how you’ll pay.</a>
-                        <a href="option3-6.html" class="steps__link"><span class="steps--number">6</span>
-                            <strong>Be prepared to deal with problems</strong></br>
-                                Speak to contractors as soon as problems come up, and get them to agree to put them right.</a>
-                    </div>
+                            <p>As soon as something happens that you’re not happy with:</p>
 
+                            <ul>
+                                <li>ask the builder or contractor to put it right</li>
 
+                                <li>come to an agreement about how they’ll fix it, and ask them to put it in writing</li>
+                            </ul>
+
+                            <div class="callout--turquoise">
+                                <h3>Next steps</h3>
+
+                                <p>If a contractor does a bad job or doesn’t do what you agreed, you should be entitled to get it fixed or get some money back. Find out what you can do about problems with building work, decorating and home repairs.</p>
+                            </div>
                     </div>
                 </div>
 
@@ -284,6 +270,22 @@
                 </form>
             </aside>
 
+
+
+
+            <nav class="side-nav" data-track-zone="side-nav">
+                <div class="sticker">
+                    <div class="steps--navigation">
+                        <h4>Steps in this guide</h4>
+                        <a href="option3-1.html" class="steps--navigation__link"><span class="steps--navigation--number">1</span>Check if you need permission or approval</a>
+                        <a href="option3-2.html" class="steps--navigation__link"><span class="steps--navigation--number">2</span>Find good builders or contractors</a>
+                        <a href="option3-3.html" class="steps--navigation__link"><span class="steps--navigation--number">3</span>Get quotes before you decide who to use</a>
+                        <a href="option3-4.html" class="steps--navigation__link"><span class="steps--navigation--number">4</span>Check there’s insurance in place</a>
+                        <a href="option3-5.html" class="steps--navigation__link"><span class="steps--navigation--number">5</span>Get a written contract</a>
+                        <a href="option3-6.html" class="steps--navigation__link--active"><span class="steps--navigation--number">6</span>Be prepared to deal with problems</a>
+                    </div>
+                </div>
+            </nav>
 
             <!-- Social Sharing bar hidden for testing -->
             <!--
